Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/Cycle3.out
Cycle3.java:17:9: compiler.err.cyclic.annotation.element: cycle3.A
1 error
